--- a/mcudle/package.json
+++ b/mcudle/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "encoding": "^0.1.13",
+    "firebase": "^10.12.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
